REGRESSION (r262366): [ Mac wk1 ] webgl/webgl-backing-store-size-update.html is failing https://bugs.webkit.org/show_bug.cgi?id=212647 <rdar://problem/63882960>

Reviewed by Eric Carlson.

Source/WebCore:

In some unusual cases, specifically WebKit 1, a WebGLLayer could prepareForDisplay
but never get told to actually display, producing incorrect results. Fix this by
simply calling setNeedsDisplay.

While here, address some comments from Simon Fraser that were made
after r262366.

* dom/Document.cpp:
(WebCore::Document::prepareCanvasesForDisplayIfNeeded):
* platform/graphics/cocoa/WebGLLayer.h: Move the instance variables into the implementation file
since they are not exposed as an interface.
* platform/graphics/cocoa/WebGLLayer.mm:
(-[WebGLLayer initWithGraphicsContextGL:]):
(-[WebGLLayer prepareForDisplay]):
(-[WebGLLayer display]):

Tools:

Drive-by comment from Simon. Remove some useless braces.

* TestWebKitAPI/Tests/WebKitLegacy/ios/WebGLPrepareDisplayOnWebThread.mm:

LayoutTests:

Make this test wait a frame before calling notifyDone. This is required at the
moment because calling notifyDone in WebKit1 sidesteps the normal painting logic and
forces compositing to happen, and thus will produce incorrect results for WebGL if
we're already in the middle of the rendering loop (e.g. inside a requestAnimationFrame
that has touched pixels).

* webgl/webgl-backing-store-size-update.html:

Canonical link: https://commits.webkit.org/225645@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262643 268f45cc-cd09-0410-ab3c-d52691b4dbfc