Source/WebCore/platform/graphics/cocoa/WebGLLayer.h
@@ -44,26 +44,6 @@ ALLOW_DEPRECATED_DECLARATIONS_BEGIN
 #else
 #error Unsupported platform
 #endif
-{
-    NakedPtr<WebCore::GraphicsContextGLOpenGL> _context;
-    float _devicePixelRatio;
-#if USE(OPENGL) || USE(ANGLE)
-    std::unique_ptr<WebCore::IOSurface> _contentsBuffer;
-    std::unique_ptr<WebCore::IOSurface> _drawingBuffer;
-    std::unique_ptr<WebCore::IOSurface> _spareBuffer;
-    WebCore::IntSize _bufferSize;
-    BOOL _usingAlpha;
-#endif
-#if USE(ANGLE)
-    void* _eglDisplay;
-    void* _eglConfig;
-    void* _contentsPbuffer;
-    void* _drawingPbuffer;
-    void* _sparePbuffer;
-    void* _latchedPbuffer;
-#endif
-    BOOL _prepared;
-}
 
 @property (nonatomic) NakedPtr<WebCore::GraphicsContextGLOpenGL> context;
 
